5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1601_1806.log
== TEST (2019-04-10 18:54:43) 
-- CODE:
import math as m
n = int(input("numero do grupo"))

P = 1 - ((m.factorial(365)/m.factorial(365-n))*(1/(365**n)))
Pn= P*100
print(round(Pn, 2)
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:54:55) 
-- CODE:
import math as m
n = int(input("numero do grupo"))

P = 1 - ((m.factorial(365)/m.factorial(365-n))*(1/(365**n)))
Pn= P*100
print(round(Pn, 2)
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:55:46) 
-- CODE:
import math as m
n = int(input("numero do grupo"))

P = 1 - ((m.factorial(365)/m.factorial(365-n))*(1/(365**n)))
Pn= P*100
print(round(Pn, )
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:56:30) 
-- CODE:
import math as m
n = int(input("numero do grupo"))

P = 1 - ((m.factorial(365)/m.factorial(365-n))*(1/(365**n)))
Pn= P*100
print(round(Pn,2)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:56:59) 
-- CODE:
import math as m
n = int(input("numero do grupo"))

P = 1 - ((m.factorial(365)/m.factorial(365-n))*(1/(365**n)))
Pn= P*100
print(round(Pn,  2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:57:17) 
-- CODE:
import math as m
n = int(input("numero do grupo"))

P = 1 - ((m.factorial(365)/m.factorial(365-n))*(1/(365**n)))
Pn= P*100
print(round(Pn,  2))
-- EXECUTION TIME:
0.196618
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
